# spd-logger

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: buffer.hpp  consumer.hpp  file_writer.hpp  logger.hpp  main.cpp  producer.hpp  utils.hpp
